--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,73 +1,71 @@
 #sidebar {
     text-align: center;
     box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,.075);
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--editor-border-color);
-    border-radius: 15px;
-    padding: 20px;
+    border-radius: 15px 0 0 15px;
+    padding: 25px;
     box-sizing: border-box;
-    height: calc(100vh - 105px);
-    width: calc(33% - 15px);
-    background-color: var(--bg-color);
+    height: calc(100% - 205px);
+    width: calc(100% - ((100vh - 120px)/2.11));
+    background: linear-gradient(to bottom right, rgba(85, 150, 191, .9), rgba(70, 105, 175, .9));
     position: absolute;
-    top: 90px;
-    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
 
-    button {
-        display: inline-block;
-        margin: 15px 5px;
-        text-align: center;
-        cursor: pointer;
-        width: calc(50% - 20px);
-        box-sizing: border-box;
-        border-radius: 10px;
-        outline: none;
-        border: none;
-        padding: 14px;
-        font-weight: var(--semi-bold);
-        font-size: 12pt;
+    #logo {
+        width:125px;
+        float: left;
+    }
+
+    #sidebarButtons {
+        float: right;
+
+        div {
+            border-color: rgba(255,255,255,.3);
+            border-width: 3px;
+            border-right-style: solid;
+            &:last-of-type {
+                border-right-style: none;
+            }
+            font-size: 12pt;
+            font-weight: 600;
+            height: 25px;
+            line-height: 25px;
+            white-space: nowrap;
+            display: inline-block;
+            padding: 5px 20px;
+            padding-left: 55px;
+            color: white;
+            background-repeat: no-repeat;
+            background-size: 27px;
+            background-position: 20px center;
+        }
+    }
+
+    h1 {
+        font-size: 36pt;
         color: white;
-        background-color: var(--tint-color);
+        margin-top: 55px;
+        margin-bottom: 0;
     }
-    button:hover {
-        opacity: .8;
+    h2 {
+        font-weight: 600;
+        font-size: 20pt;
+        color: white;
+        margin-top: 0px;
+        margin-bottom: 0;
     }
 
-    .settingsCell {
-        background-color: var(--sidebarTableCellBg);
-        margin: 0 auto;
-        padding: 15px;
+    .colorPreview {
+        border-color: rgb(223, 223, 223);
+        border-style: solid;
+        border-width: 1px;
+        float: right;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        color: rgba(0,0,0,0);
         border-radius: 10px;
-        padding-bottom: 60px;
-        box-sizing: border-box;
-
-        h3 {
-            margin: 0;
-        }
-
-        p {
-            margin: 0;
-            margin-top: 5px;
-            margin-bottom: 10px;
-        }
-    
-        input {
-            background-color: rgba(0,0,0,.15);
-            float: left;
-        }
-
-        .colorPreview {
-            border-color: rgb(223, 223, 223);
-            border-style: solid;
-            border-width: 1px;
-            float: right;
-            padding-top: 9px;
-            padding-bottom: 9px;
-            color: rgba(0,0,0,0);
-            border-radius: 10px;
-            width: 60px;
-        }
+        width: 60px;
     }
 }
 
