--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,64 @@
-#previewBox {
-  scrollbar-width: none;
-  overflow-x: visible;
-  overflow-y: scroll;
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05), -10px -10px 15px rgba(0, 0, 0, 0.05);
-  width: 66%;
-  max-width: calc((100vh - 105px)/2.11);
-  height: calc(100vh - 105px);
-  border-radius: 5px;
-  background-color: var(--bg-color);
+#everythingWrapper {
+  width: calc(100% - 40px);
+  max-width: 1310px;
+  height: calc(100% - 40px);
   position: absolute;
-  top: 90px;
-  left: 66%;
-  transform: translateX(-50%); }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  #everythingWrapper #iX {
+    pointer-events: none;
+    width: calc((100vh - 105px)/2.11);
+    height: calc(100vh - 105px);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    z-index: 1000; }
+  #everythingWrapper #previewBox {
+    scrollbar-width: none;
+    overflow-x: visible;
+    overflow-y: scroll;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05), -10px -10px 15px rgba(0, 0, 0, 0.05);
+    width: calc((100vh - 200px)/2.16);
+    height: calc(100vh - 150px);
+    background-color: var(--bg-color);
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%); }
+    #everythingWrapper #previewBox::-webkit-scrollbar {
+      width: 0px;
+      background: transparent; }
+    #everythingWrapper #previewBox #bannerWrapper {
+      min-height: 230px; }
+      #everythingWrapper #previewBox #bannerWrapper #bannerImage {
+        min-height: 230px; }
+    #everythingWrapper #previewBox .navbar {
+      transform: translateX(-50%);
+      min-width: calc((100vh - 200px)/2.16) !important;
+      top: 132.5px;
+      left: 66%;
+      max-width: calc((100vh - 105px)/2.11); }
 
-#previewBox::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; }
+/* Background Shapes */
+#backgroundSquare, #backgroundCircle {
+  background-color: var(--bg-shape-color);
+  width: 50vw;
+  height: 50vw;
+  position: absolute; }
 
-.navbar {
-  transform: translateX(-50%);
-  min-width: calc((100vh - 105px)/2.11) !important;
-  top: 90px;
-  left: 66%;
-  max-width: calc((100vh - 105px)/2.11); }
+#backgroundSquare {
+  transform: translate(55%, -40%) rotate(45deg);
+  border-radius: 50px;
+  top: 0;
+  right: 0; }
+
+#backgroundCircle {
+  transform: translate(-35%, 65%);
+  border-radius: 50%;
+  bottom: 0;
+  left: 0; }
 
 .editableImage {
   cursor: pointer;
@@ -53,9 +89,6 @@
   -moz-transition: transform 0.3s ease, opacity 0.3s ease;
   -o-transition: transform 0.3s ease, opacity 0.3s ease;
   -ms-transition: transform 0.3s ease, opacity 0.3s ease; }
-
-.headerPillSelector {
-  max-width: calc(100% - 41px) !important; }
 
 /* Edit Tabs Button */
 #editTabsButton {
@@ -140,130 +173,63 @@
     width: 25px;
     height: 25px; }
 
-#realPageNavbar {
-  background-color: #292c30;
-  height: 75px;
-  width: 100%;
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  left: 0; }
-  #realPageNavbar div {
-    color: white;
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: calc(90% - 20px);
-    max-width: 1200px;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-  #realPageNavbar .realLeftNav {
-    float: left;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    padding: 20px;
-    color: white; }
-  #realPageNavbar .realRightNav {
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    padding: 20px;
-    color: white;
-    float: right; }
-  #realPageNavbar .realRightNav:hover {
-    background-color: rgba(255, 255, 255, 0.1); }
-
 #sidebar {
   text-align: center;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--editor-border-color);
-  border-radius: 15px;
-  padding: 20px;
+  border-radius: 15px 0 0 15px;
+  padding: 25px;
   box-sizing: border-box;
-  height: calc(100vh - 105px);
-  width: calc(33% - 15px);
-  background-color: var(--bg-color);
+  height: calc(100% - 205px);
+  width: calc(100% - ((100vh - 120px)/2.11));
+  background: linear-gradient(to bottom right, rgba(85, 150, 191, 0.9), rgba(70, 105, 175, 0.9));
   position: absolute;
-  top: 90px;
-  left: 15px; }
-  #sidebar button {
-    display: inline-block;
-    margin: 15px 5px;
-    text-align: center;
-    cursor: pointer;
-    width: calc(50% - 20px);
-    box-sizing: border-box;
-    border-radius: 10px;
-    outline: none;
-    border: none;
-    padding: 14px;
-    font-weight: var(--semi-bold);
-    font-size: 12pt;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0; }
+  #sidebar #logo {
+    width: 125px;
+    float: left; }
+  #sidebar #sidebarButtons {
+    float: right; }
+    #sidebar #sidebarButtons div {
+      border-color: rgba(255, 255, 255, 0.3);
+      border-width: 3px;
+      border-right-style: solid;
+      font-size: 12pt;
+      font-weight: 600;
+      height: 25px;
+      line-height: 25px;
+      white-space: nowrap;
+      display: inline-block;
+      padding: 5px 20px;
+      padding-left: 55px;
+      color: white;
+      background-repeat: no-repeat;
+      background-size: 27px;
+      background-position: 20px center; }
+      #sidebar #sidebarButtons div:last-of-type {
+        border-right-style: none; }
+  #sidebar h1 {
+    font-size: 36pt;
     color: white;
-    background-color: var(--tint-color); }
-  #sidebar button:hover {
-    opacity: .8; }
-  #sidebar .settingsCell {
-    background-color: var(--sidebarTableCellBg);
-    margin: 0 auto;
-    padding: 15px;
+    margin-top: 55px;
+    margin-bottom: 0; }
+  #sidebar h2 {
+    font-weight: 600;
+    font-size: 20pt;
+    color: white;
+    margin-top: 0px;
+    margin-bottom: 0; }
+  #sidebar .colorPreview {
+    border-color: #dfdfdf;
+    border-style: solid;
+    border-width: 1px;
+    float: right;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    color: rgba(0, 0, 0, 0);
     border-radius: 10px;
-    padding-bottom: 60px;
-    box-sizing: border-box; }
-    #sidebar .settingsCell h3 {
-      margin: 0; }
-    #sidebar .settingsCell p {
-      margin: 0;
-      margin-top: 5px;
-      margin-bottom: 10px; }
-    #sidebar .settingsCell input {
-      background-color: rgba(0, 0, 0, 0.15);
-      float: left; }
-    #sidebar .settingsCell .colorPreview {
-      border-color: #dfdfdf;
-      border-style: solid;
-      border-width: 1px;
-      float: right;
-      padding-top: 9px;
-      padding-bottom: 9px;
-      color: rgba(0, 0, 0, 0);
-      border-radius: 10px;
-      width: 60px; }
-
-.alertVisible #alertWindow {
-  animation: popAlert 0.6s ease; }
-
-.alertVisible #everythingWrapper {
-  filter: blur(4px); }
-
-.alertVisible #alertContainer {
-  display: inline;
-  opacity: 1; }
-
-@keyframes popAlert {
-  from {
-    transform: translate(-50%, -50%) scale(0); }
-  60% {
-    transform: translate(-50%, -50%) scale(1.2); }
-  75% {
-    transform: translate(-50%, -50%) scale(1); }
-  90% {
-    transform: translate(-50%, -50%) scale(1.05); }
-  100% {
-    transform: translate(-50%, -50%) scale(1); } }
+    width: 60px; }
 
 @keyframes switchAlertPage {
   50% {
@@ -280,42 +246,41 @@
   animation: switchAlertPage 0.6s ease !important; }
 
 #alertContainer {
-  overflow: hidden;
-  display: none;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
+  color: var(--text-color);
+  background-color: var(--bg-color);
+  width: calc(100% - 45px);
+  height: calc(100% - 230px);
   position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.75);
-  transition: opacity 0.35s ease;
-  -webkit-transition: opacity 0.35s ease;
-  -moz-transition: opacity 0.35s ease;
-  -o-transition: opacity 0.35s ease;
-  -ms-transition: opacity 0.35s ease; }
+  bottom: 20px;
+  left: 20px;
+  padding: 14px;
+  box-sizing: border-box;
+  border-radius: 15px;
+  overflow: hidden;
+  margin-top: 20px; }
 
 #alertWindow {
-  max-height: calc(100% - 150px);
-  overflow-y: scroll;
-  width: calc(100% - 20px);
-  max-width: 1000px;
-  border-radius: 15px;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: var(--bg-color);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-  #alertWindow #alertHeader {
-    font-size: 24pt;
-    margin-top: 0;
-    margin-bottom: 5px; }
-  #alertWindow #alertSubheader {
-    margin-top: 0;
-    font-size: 16pt; }
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  padding-right: 8px;
+  box-sizing: border-box; }
+  #alertWindow::-webkit-scrollbar {
+    width: 6px; }
+  #alertWindow::-webkit-scrollbar-track {
+    background: var(--scrollbar-color);
+    border-radius: 25px; }
+  #alertWindow::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-track-color);
+    border-radius: 25px; }
+  #alertWindow::-webkit-scrollbar-thumb:hover {
+    background: var(--scrollbar-track-hover-color); }
+  #alertWindow h1 {
+    font-size: 20pt; }
+  #alertWindow h2 {
+    font-size: 18pt; }
   #alertWindow h1, #alertWindow h2, #alertWindow h3, #alertWindow p, #alertWindow #alertButton, #alertWindow .alertError, #alertWindow .optionWrapper input, #alertWindow .checkmark, #alertWindow .tooltip, #alertWindow .optionWrapper, #alertWindow .alertContent, #alertWindow input[type=text], #alertWindow .tabEditorCell {
+    color: var(--text-color);
     margin: 8px auto;
     max-width: 600px;
     text-align: center; }
@@ -624,29 +589,57 @@
 .hideEditUI .editUI {
   display: none; }
 
-.hideEditUI .headerPillSelector {
-  max-width: 100% !important; }
-
 html {
+  --bg-shape-color: #d6e7f2;
   --body-bg-color: #f8f9fa;
   --dark-ui-color: rgb(236,236,236);
   --darker-ui-color: rgba(0,0,0,.2);
   --sidebarTableCellBg: rgba(0,0,0,.03);
   --editor-border-color: rgb(223, 223, 223);
+  --scrollbar-color: rgb(0,0,0,.1);
+  --scrollbar-track-color: rgb(0,0,0,.25);
+  --scrollbar-track-hover-color: rgb(0,0,0,.35);
   --addViewUI-preview-bg: #EDEDED;
   --addViewUI-preview-box: #FFFFFF; }
 
 .darkMode {
+  --bg-shape-color: #262636;
   --body-bg-color: #1e1e1f;
   --dark-ui-color: rgb(29,29,29);
   --darker-ui-color: rgba(0,0,0,.4);
   --sidebarTableCellBg: rgba(0,0,0,.08);
   --editor-border-color: #262629;
+  --scrollbar-color: rgb(255,255,255,.1);
+  --scrollbar-track-color: rgb(255,255,255,.25);
+  --scrollbar-track-hover-color: rgb(255,255,255,.35);
   --addViewUI-preview-bg: #1e1e1f;
   --addViewUI-preview-box: #383838; }
 
 body {
-  background-color: var(--body-bg-color); }
+  background-color: var(--body-bg-color);
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden;
+  margin: 0; }
+
+/* Background Shapes */
+#backgroundSquare, #backgroundCircle {
+  background-color: var(--bg-shape-color);
+  width: 50vw;
+  height: 50vw;
+  position: absolute; }
+
+#backgroundSquare {
+  transform: translate(55%, -40%) rotate(45deg);
+  border-radius: 50px;
+  top: 0;
+  right: 0; }
+
+#backgroundCircle {
+  transform: translate(-35%, 65%);
+  border-radius: 50%;
+  bottom: 0;
+  left: 0; }
 
 input[type=text] {
   border-color: #dfdfdf;
