--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,4 @@
 @import 'editor.scss';
-@import 'navbar.scss';
 @import 'sidebar.scss';
 
 @import 'alerts/alerts.scss';
@@ -10,21 +9,31 @@
 @import 'hideEditUI.scss';
 
 html {
+    --bg-shape-color: #d6e7f2;
     --body-bg-color: #f8f9fa;
     --dark-ui-color: rgb(236,236,236);
     --darker-ui-color: rgba(0,0,0,.2);
     --sidebarTableCellBg: rgba(0,0,0,.03);
     --editor-border-color: rgb(223, 223, 223);
 
+    --scrollbar-color: rgb(0,0,0,.1);
+    --scrollbar-track-color: rgb(0,0,0,.25);
+    --scrollbar-track-hover-color: rgb(0,0,0,.35);
+
     --addViewUI-preview-bg: #EDEDED;
     --addViewUI-preview-box: #FFFFFF;
 }
 .darkMode {
+    --bg-shape-color: #262636;
     --body-bg-color: #1e1e1f;
     --dark-ui-color: rgb(29,29,29);
     --darker-ui-color: rgba(0,0,0,.4);
     --sidebarTableCellBg: rgba(0,0,0,.08);
     --editor-border-color: #262629;
+
+    --scrollbar-color: rgb(255,255,255,.1);
+    --scrollbar-track-color: rgb(255,255,255,.25);
+    --scrollbar-track-hover-color: rgb(255,255,255,.35);
 
     --addViewUI-preview-bg: #1e1e1f;
     --addViewUI-preview-box: #383838;
@@ -32,6 +41,30 @@ html {
 
 body {
     background-color: var(--body-bg-color);
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
+    margin: 0;
+}
+
+/* Background Shapes */
+#backgroundSquare, #backgroundCircle {
+    background-color: var(--bg-shape-color);
+    width: 50vw;
+    height: 50vw;
+    position: absolute;
+}
+#backgroundSquare {
+    transform: translate(55%, -40%) rotate(45deg);
+    border-radius: 50px;
+    top: 0;
+    right: 0;
+}
+#backgroundCircle {
+    transform: translate(-35%, 65%);
+    border-radius: 50%;
+    bottom: 0;
+    left: 0;
 }
 
 // Text Form Elements
