--- a/scss/_editor.scss
+++ b/scss/_editor.scss
@@ -60,26 +60,6 @@
     }
 }
 
-/* Background Shapes */
-#backgroundSquare, #backgroundCircle {
-    background-color: var(--bg-shape-color);
-    width: 50vw;
-    height: 50vw;
-    position: absolute;
-}
-#backgroundSquare {
-    transform: translate(55%, -40%) rotate(45deg);
-    border-radius: 50px;
-    top: 0;
-    right: 0;
-}
-#backgroundCircle {
-    transform: translate(-35%, 65%);
-    border-radius: 50%;
-    bottom: 0;
-    left: 0;
-}
-
 
 .editableImage {
     cursor: pointer;
@@ -99,7 +79,7 @@
     mask-size: 35px;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url(../img/edit.svg);
+    background-image: url(https://pinpal.github.io/Sileo-Depiction-Editor/img/edit.svg);
     position: absolute;
     top: 50%;
     left: 50%;
