We SCSS now bois

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,7 +47,7 @@ body {
     margin: 0;
 }
 
-/* Background Shapes */
+// Background Shapes
 #backgroundSquare, #backgroundCircle {
     background-color: var(--bg-shape-color);
     width: 50vw;
