Focus UI + Fix Markdown

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,17 @@
       min-height: 230px; }
       #everythingWrapper #previewBox #bannerWrapper #bannerImage {
         min-height: 230px; }
+    #everythingWrapper #previewBox #previewElementFocuser {
+      display: none;
+      z-index: 9999;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.65); }
+    #everythingWrapper #previewBox .focused {
+      z-index: 10000; }
     #everythingWrapper #previewBox .navbar {
       transform: translateX(-50%);
       min-width: calc((100vh - 200px)/2.16) !important;
@@ -112,6 +123,8 @@
   padding-left: 15px; }
 
 .addViewButton {
+  color: rgba(0, 0, 0, 0);
+  background-color: var(--bg-color);
   position: relative;
   opacity: 0.4;
   cursor: pointer;
@@ -127,6 +140,23 @@
   -moz-transition: height 0.3s ease, border-color 0.3s ease;
   -o-transition: height 0.3s ease, border-color 0.3s ease;
   -ms-transition: height 0.3s ease, border-color 0.3s ease; }
+  .addViewButton.focused {
+    color: var(--tint-color);
+    opacity: 1;
+    border-color: var(--tint-color);
+    height: 100px;
+    line-height: 100px;
+    text-align: center; }
+    .addViewButton.focused div {
+      display: none; }
+  .addViewButton:hover {
+    opacity: 1;
+    border-color: var(--tint-color);
+    height: 100px; }
+    .addViewButton:hover div {
+      background-color: var(--tint-color);
+      width: 25px;
+      height: 25px; }
   .addViewButton div {
     transform: translate(-50%, -50%);
     position: absolute;
@@ -144,15 +174,6 @@
     mask-image: url(../img/add.svg);
     -webkit-mask-image: url(../img/add.svg);
     transition: width 0.3s ease, height 0.3s ease; }
-
-.addViewButton:hover {
-  opacity: 1;
-  border-color: var(--tint-color);
-  height: 100px; }
-  .addViewButton:hover div {
-    background-color: var(--tint-color);
-    width: 25px;
-    height: 25px; }
 
 #sidebar {
   text-align: center;
@@ -540,6 +561,11 @@
   margin: 0 auto; }
   #alertWindow #editDepictionMarkdownView * {
     border: none !important; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror {
+    min-height: 120px;
+    height: auto; }
+  #alertWindow #editDepictionMarkdownView .CodeMirror-scroll {
+    min-height: 120px; }
   #alertWindow #editDepictionMarkdownView .CodeMirror-cursor {
     border-left: 1px solid var(--text-color) !important; }
   #alertWindow #editDepictionMarkdownView .editor-toolbar, #alertWindow #editDepictionMarkdownView .CodeMirror, #alertWindow #editDepictionMarkdownView .editor-statusbar {
