--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -1,15 +1,15 @@
 // Switch page for alert window
 @keyframes switchAlertPage {
     50% {
-        transform: translateX(-100%);
+        transform: translate(-150%, -50%);
         opacity: 0;
     }
     51% {
-        transform: translateX(100%);
+        transform: translate(150%, -50%);
         opacity: 0;
     }
     to {
-        transform: translateX(0%);
+        transform: translate(-50%, -50%);
         opacity: 1;
     }
 }
@@ -19,12 +19,13 @@
 
 // Main Alert Window
 #alertContainer {
+    position: relative;
     color: var(--text-color);
     background-color: var(--bg-color);
     width: calc(100% - 45px);
-    height: calc(100% - 230px);
+    height: calc(100% - 300px);
     position: absolute;
-    bottom: 20px;
+    bottom: 90px;
     left: 20px;
     padding: 14px;
     box-sizing: border-box;
@@ -33,10 +34,47 @@
     margin-top: 20px;
 }
 
+// Alert Buttons
+.alertButton {
+    box-sizing: border-box;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    cursor: pointer;
+    margin-top: 40px;
+    width: calc(50% - 40px);
+    height: 50px;
+    line-height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    font-size: 12pt;
+    color: rgb(90,129,186);
+    background-color: var(--bg-color);
+
+    &::hover {
+        opacity: .85;
+    }
+
+    &.cancelButton {
+        background-color: #fe504f;
+        left: calc(50% + 15px);
+        color: white;
+    }
+}
+
 #alertWindow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     overflow-y: auto;
+    max-height: 100%;
     width: 100%;
-    height: 100%;
     padding-right: 8px;
     box-sizing: border-box;
 
@@ -62,30 +100,13 @@
         font-size: 18pt;
     }
 
-    h1, h2, h3, p, #alertButton, .alertError, .optionWrapper input, .checkmark, .tooltip, .optionWrapper, .alertContent, input[type=text], .tabEditorCell {
+    h1, h2, h3, p, .alertError, .optionWrapper input, .checkmark, .tooltip, .optionWrapper, .alertContent, input[type=text], .tabEditorCell {
         color: var(--text-color);
         margin: 8px auto;
         max-width: 600px;
         text-align: center;
     }
 
-    #alertButton {
-        cursor: pointer;
-        margin-top: 40px;
-        max-width: 300px;
-        width: 100%;
-        border-radius: 10px;
-        outline: none;
-        border: none;
-        padding: 14px;
-        font-weight: 600;
-        font-size: 11pt;
-        color: white;
-        background-color: var(--tint-color);
-    }
-    #alertButton:hover {
-        opacity: .85;
-    }
     p {
         margin-top: 20px;
         margin-bottom: 20px;
