--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@
     transition: width 0.3s ease, height 0.3s ease; }
 
 #sidebar {
+  display: table;
   text-align: center;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   border-radius: 15px 0 0 15px;
@@ -230,7 +231,7 @@
     font-size: 20pt;
     color: white;
     margin-top: 0px;
-    margin-bottom: 0; }
+    margin-bottom: 20px; }
   #sidebar .colorPreview {
     border-color: #dfdfdf;
     border-style: solid;
@@ -257,19 +258,23 @@
   animation: switchAlertPage 0.6s ease !important; }
 
 #alertContainer {
-  position: relative;
-  color: var(--text-color);
-  background-color: var(--bg-color);
+  display: table-row;
   width: calc(100% - 45px);
-  height: calc(100% - 300px);
-  position: absolute;
-  bottom: 90px;
-  left: 20px;
-  padding: 14px;
-  box-sizing: border-box;
-  border-radius: 15px;
-  overflow: hidden;
-  margin-top: 20px; }
+  height: 100%; }
+  #alertContainer #alertInnerContainer {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    color: var(--text-color);
+    background-color: var(--bg-color);
+    padding: 14px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    overflow: hidden; }
+
+#alertButtonContainer {
+  display: table-row;
+  height: 70px; }
 
 .alertButton {
   box-sizing: border-box;
