--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,4 +1,5 @@
 #sidebar {
+    display: table;
     text-align: center;
     box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,.075);
     border-radius: 15px 0 0 15px;
@@ -67,7 +68,7 @@
         font-size: 20pt;
         color: white;
         margin-top: 0px;
-        margin-bottom: 0;
+        margin-bottom: 20px;
     }
 
     .colorPreview {
