--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -19,19 +19,25 @@
 
 // Main Alert Window
 #alertContainer {
-    position: relative;
-    color: var(--text-color);
-    background-color: var(--bg-color);
+    display: table-row;
     width: calc(100% - 45px);
-    height: calc(100% - 300px);
-    position: absolute;
-    bottom: 90px;
-    left: 20px;
-    padding: 14px;
-    box-sizing: border-box;
-    border-radius: 15px;
-    overflow: hidden;
-    margin-top: 20px;
+    height: 100%;
+
+    #alertInnerContainer {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        color: var(--text-color);
+        background-color: var(--bg-color);
+        padding: 14px;
+        box-sizing: border-box;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+}
+#alertButtonContainer {
+    display: table-row;
+    height: 70px;
 }
 
 // Alert Buttons
