--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -19,39 +19,49 @@
     }
 
     #sidebarButtons {
-        float: right;
+        padding-bottom: 5px;
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        height: 45px;
+        white-space: nowrap;
 
         div {
-            white-space: nowrap;
             float: right;
+            white-space: nowrap;
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
         }
 
-        .seperator {
-            width: 4px;
-            background-color: rgba(255,255,255,.3);
-            height: 42px;
-            border-radius: 100px;
-        }
-
         .sidebarButton {
+            overflow: hidden;
+            height: 42px;
+            line-height: 42px;
             cursor: pointer;
             box-sizing: border-box;
-            font-size: 12pt;
+            font-size: 0;
             font-weight: 600;
-            margin: auto 5px;
-            padding: 10px;
+            margin-left: 5px;
+            margin-right: 5px;
             padding-left: 45px;
-            color: white;
+            padding-right: 0;
+            color: rgba(0,0,0,0);
             background-repeat: no-repeat;
             background-size: 27px;
             background-position: 10px center;
             border-radius: 10px;
+            transition: font-size 0.3s ease, padding-right 0.3s ease, color 0.3s ease;
+                -webkit-transition: font-size 0.3s ease, padding-right 0.3s ease, color 0.3s ease;
+                -moz-transition: font-size 0.3s ease, padding-right 0.3s ease, color 0.3s ease;
+                -o-transition: font-size 0.3s ease, padding-right 0.3s ease, color 0.3s ease;
+                -ms-transition: font-size 0.3s ease, padding-right 0.3s ease, color 0.3s ease;
 
             &:hover {
+                color: white;
+                font-size: 12pt;
+                padding-right: 10px;
                 background-color: rgba(255,255,255,.2);
             }
         }
