--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -1,15 +1,15 @@
 // Switch page for alert window
 @keyframes switchAlertPage {
     50% {
-        transform: translate(-150%, -50%);
+        transform: translate(-100%, -50%);
         opacity: 0;
     }
     51% {
-        transform: translate(150%, -50%);
+        transform: translate(100%, -50%);
         opacity: 0;
     }
     to {
-        transform: translate(-50%, -50%);
+        transform: translate(0, -50%);
         opacity: 1;
     }
 }
@@ -76,11 +76,11 @@
 #alertWindow {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 0;
+    transform: translateY(-50%);
     overflow-y: auto;
-    max-height: 100%;
-    width: 100%;
+    max-height: calc(100% - 24px);
+    width: calc(100% - 14px);
     padding-right: 8px;
     box-sizing: border-box;
 
