Basic EditView + Uncompile JS

--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,49 @@
   padding-right: 50px;
   padding-left: 15px; }
 
+.DepictionView {
+  margin: 0 auto;
+  background-color: var(--bg-color);
+  cursor: pointer;
+  border-radius: 5px;
+  width: calc(100% - 15px);
+  border-color: rgba(0, 0, 0, 0);
+  border-width: 2px;
+  border-style: dashed;
+  border-top-style: none;
+  transition: border-color 0.3s ease;
+  -webkit-transition: border-color 0.3s ease;
+  -moz-transition: border-color 0.3s ease;
+  -o-transition: border-color 0.3s ease;
+  -ms-transition: border-color 0.3s ease; }
+  .DepictionView:before {
+    border-radius: 5px 5px 0 0;
+    margin-left: -2px;
+    width: calc(100% + 4px);
+    color: var(--bg-color);
+    font-size: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    display: block;
+    content: "Edit View";
+    text-align: center;
+    transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
+    -webkit-transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
+    -moz-transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
+    -o-transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
+    -ms-transition: background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease; }
+  .DepictionView.focused {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); }
+  .DepictionView:hover, .DepictionView.focused {
+    border-color: var(--tint-color); }
+    .DepictionView:hover:before, .DepictionView.focused:before {
+      background-color: var(--tint-color);
+      padding-top: 10px;
+      padding-bottom: 10px;
+      font-size: 12pt; }
+
 .addViewButton {
   color: rgba(0, 0, 0, 0);
   background-color: var(--bg-color);
