--- a/css/main.css
+++ b/css/main.css
@@ -448,48 +448,6 @@
         visibility: visible;
         transform: translateY(-100%);
         opacity: 1; }
-    #alertWindow .optionWrapper .checkboxWrapper {
-      padding: 10px;
-      position: relative;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      padding-left: 35px;
-      padding-right: 35px; }
-      #alertWindow .optionWrapper .checkboxWrapper input[type=checkbox] {
-        position: absolute;
-        opacity: 0;
-        cursor: pointer;
-        height: 0;
-        width: 0; }
-      #alertWindow .optionWrapper .checkboxWrapper .checkmark {
-        border-width: 1px;
-        border-color: var(--tint-color);
-        border-style: solid;
-        overflow: hidden;
-        border-radius: 50%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 25px;
-        width: 25px;
-        background-color: #eee; }
-      #alertWindow .optionWrapper .checkboxWrapper input:checked ~ .checkmark {
-        background-color: var(--tint-color); }
-      #alertWindow .optionWrapper .checkboxWrapper .checkmark:after {
-        content: "";
-        position: absolute;
-        display: none;
-        left: 9px;
-        top: 5px;
-        width: 5px;
-        height: 10px;
-        border: solid white;
-        border-width: 0 3px 3px 0;
-        transform: rotate(45deg); }
-      #alertWindow .optionWrapper .checkboxWrapper input:checked ~ .checkmark:after {
-        display: block; }
 
 #editTabsUI h3 {
   margin-bottom: 20px; }
@@ -678,6 +636,102 @@
 
 .darkMode .editor-toolbar a {
   filter: invert(1); }
+
+.checkboxWrapper {
+  padding: 10px;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-left: 35px;
+  padding-right: 35px; }
+  .checkboxWrapper input[type=checkbox] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0; }
+  .checkboxWrapper .checkmark {
+    border-width: 1px;
+    border-color: var(--tint-color);
+    border-style: solid;
+    overflow: hidden;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee; }
+  .checkboxWrapper input:checked ~ .checkmark {
+    background-color: var(--tint-color); }
+  .checkboxWrapper .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg); }
+  .checkboxWrapper input:checked ~ .checkmark:after {
+    display: block; }
+
+.numberInput {
+  margin-left: 5px;
+  position: relative;
+  width: 130px;
+  height: 45px;
+  display: inline-flex; }
+  .numberInput input[type=number] {
+    background-color: var(--bg-color);
+    border: solid 1px var(--border-color);
+    border-radius: 5px;
+    width: calc(100% - 75px);
+    padding: 5px;
+    font-size: 12pt;
+    height: 20px;
+    font-weight: bold;
+    text-align: center;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield; }
+    .numberInput input[type=number]::-webkit-inner-spin-button, .numberInput input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none; }
+  .numberInput button {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    text-align: center;
+    border-radius: 50%;
+    background-color: var(--tint-color);
+    outline: none;
+    -webkit-appearance: none;
+    border: none;
+    align-items: center;
+    min-width: 25px;
+    min-height: 25px;
+    max-width: 25px;
+    max-height: 25px;
+    cursor: pointer;
+    margin: 0; }
+    .numberInput button:last-of-type {
+      left: 100%;
+      transform: translate(-100%, -50%); }
+    .numberInput button:before, .numberInput button:after {
+      display: inline-block;
+      position: absolute;
+      content: '';
+      width: .95em;
+      height: 2px;
+      background-color: var(--text-color);
+      transform: translate(-50%, -50%); }
+    .numberInput button.plus:after {
+      transform: translate(-50%, -50%) rotate(90deg); }
 
 .hideEditUI .editUI {
   display: none; }
