--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -134,7 +134,7 @@
         line-height: 50px;
         width: calc(50% - 20px);
         box-sizing: border-box;
-        background-color: var(--dark-ui-color);
+        background-color: var(--darker-ui-color);
         border-radius: 10px;
         display: inline-block;
         margin-bottom: 12px;
@@ -169,12 +169,14 @@
             left: -2px;
             opacity: 0;
             visibility: hidden;
-            transition: transform 0.15s ease, opacity 0.35s ease;
-                -webkit-transition: transform 0.15s ease, opacity 0.35s ease;
-                -moz-transition: transform 0.15s ease, opacity 0.35s ease;
-                -o-transition: transform 0.15s ease, opacity 0.35s ease;
-                -ms-transition: transform 0.15s ease, opacity 0.35s ease;
+            transform: translateY(-25%);
+            transition: transform 0.15s ease, opacity 0.25s ease;
+                -webkit-transition: transform 0.15s ease, opacity 0.25s ease;
+                -moz-transition: transform 0.15s ease, opacity 0.25s ease;
+                -o-transition: transform 0.15s ease, opacity 0.25s ease;
+                -ms-transition: transform 0.15s ease, opacity 0.25s ease;
         }
+
         &:hover {
             border-color: var(--tint-color);
             border-radius: 0 0 10px 10px;
