--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,8 +12,8 @@
 html {
     --bg-shape-color: #d6e7f2;
     --body-bg-color: #f8f9fa;
-    --dark-ui-color: rgb(206,206,206);
-    --darker-ui-color: rgba(0,0,0,.2);
+    --dark-ui-color: rgba(0,0,0,.05);
+    --darker-ui-color: rgba(0,0,0,.12);
     --sidebarTableCellBg: rgba(0,0,0,.03);
     --editor-border-color: rgb(223, 223, 223);
 
@@ -27,7 +27,7 @@ html {
 .darkMode {
     --bg-shape-color: #262636;
     --body-bg-color: #1e1e1f;
-    --dark-ui-color: rgb(29,29,29);
+    --dark-ui-color: rgba(0,0,0,.15);
     --darker-ui-color: rgba(0,0,0,.4);
     --sidebarTableCellBg: rgba(0,0,0,.08);
     --editor-border-color: #262629;
@@ -70,11 +70,8 @@ body {
 
 // Text Form Elements
 input[type=text] {
-    border-color: rgb(223, 223, 223);
-    border-style: solid;
-    border-width: 1px;
     font-size: 12pt;
-    background-color: rgba(0,0,0,.1);
+    background-color: var(--dark-ui-color);
     outline: none !important;
     display: block;
     text-align: left;
@@ -86,5 +83,6 @@ input[type=text] {
     padding-right: 30px;
     box-sizing: border-box;
     border-radius: 10px;
-    width: calc(100% - 70px);
+    height: 50px;
+    width: calc(100% - 25px);
 }
