--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,8 @@
   border-radius: 15px 0 0 15px;
   padding: 25px;
   box-sizing: border-box;
-  height: calc(100% - 205px);
+  height: calc(100% - 55px);
+  max-height: 750px;
   width: calc(100% - ((100vh - 120px)/2.11));
   background: linear-gradient(to bottom right, rgba(85, 150, 191, 0.9), rgba(70, 105, 175, 0.9));
   position: absolute;
@@ -363,7 +364,7 @@
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  overflow-y: auto;
+  overflow-y: scroll;
   max-height: calc(100% - 24px);
   width: calc(100% - 14px);
   padding-right: 8px;
@@ -775,8 +776,9 @@ html {
 
 body {
   background-color: var(--body-bg-color);
-  max-width: 100vw;
-  max-height: 100vh;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   margin: 0; }
 
